# craip

./: .gitignore  README.md  env.yml
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: ContourLabel.msg
src/environment/dynamic_objects/launch/: dynamic_door.launch  mission_setting.launch  reset_environment.launch
src/environment/dynamic_objects/models/: hinged_door.sdf  make_actor.sdf
src/environment/dynamic_objects/src/: actor_follower.cpp  gazebo_ros_actor_command.cpp  reset_actor.py  reset_go1.py
src/environment/go1/launch/: go.launch
src/environment/models/Chair/: model.sdf
src/environment/models/Exit sign/: model.config  model.sdf
src/environment/models/blue_cone/: model.config  model.sdf
src/environment/models/circle_sign/: model.config  model.sdf
src/environment/models/diamond_sign/: model.config  model.sdf
src/environment/models/drc_practice_weighted_door/: model.sdf
src/environment/models/foldable_chair/: model.sdf
src/limbo/: CMakeLists.txt  package.xml
src/limbo/config/: config.yaml
src/limbo/launch/: limbo.launch
src/llm/: CMakeLists.txt  goal_selector_web.py  package.xml
src/perception/launch/: collision_detection.launch
src/vlmaps/: CMakeLists.txt  package.xml
src/vlmaps/launch/: pointcloud_of_costmap.launch  publish_map.launch  publish_subgoal_coordinates.launch
src/vlmaps/rviz/: costmap.rviz
src/vlmaps/scripts/: build_vlmap.py  data_converter.py  filter_subgoal_coord.py  map.py  pointcloud.py  scf_wrapper.py  show_maps.py  subgoal_filter_parser.py  vlmaps_parser.py
(+36 files in other folders)
